# industrial-fault-text-classifier

./: .gitignore  README.md  README_EN.md  pyproject.toml
artifacts/: README.md
configs/: labels.json  train_config.json
data/: README.md
data/samples/: sample_repair_text.csv
docs/: step1_dataset_prepare.md  step2_dataset_eda.md  step3_cleaning_stratified_split.md  step4_model_training.md  step5_evaluation_inference.md
scripts/: step1_convert_to_csv.py  step2_dataset_eda.py  step3_clean_and_split.py  step4_model_training.py  step5_evaluate_and_predict.py
src/industrial_fault_classifier/: __init__.py  baseline.py  bert.py  cli.py  config.py  constants.py  data.py  evaluation.py  inference.py  labels.py  metrics.py  pipeline.py  training.py
